# FMusicPlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/swan/fmusicplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  video-player.cpp
app/src/main/cpp/util/: DZAudio.cpp  DZAudio.h  DZConstDefine.h  DZFFmpeg.cpp  DZFFmpeg.h  DZJNICall.cpp  DZJNICall.h  DZMedia.cpp  DZMedia.h  DZPacketQueue.cpp  DZPacketQueue.h  DZPlayerStatus.cpp  DZPlayerStatus.h  DZVideo.cpp  DZVideo.h
app/src/main/java/com/swan/fmusicplayer/: MainActivity.java
app/src/main/java/com/swan/media/: SwanPlayer.java  SwanVideoView.java
app/src/main/java/com/swan/media/listener/: MediaErrorListener.java  MediaPreparedListener.java
app/src/main/jniLibs/include/libavfilter/: avfilter.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/swan/fmusicplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
